--- a/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html
+++ b/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html
@@ -397,7 +397,7 @@
       </li>
       <li class="cnjnctn-col">
 	      <h4 class="mrgn-tp-sm text-muted">For individual accounts only<span class="wb-inv">: Option 2</span></h4>
-        <p>You will provide tax information from a recent notice of assessment that was processed at least 6 months ago</p>
+        <p>You will provide your client's tax information from a recent notice of assessment that was processed at least 6 months ago</p>
       </li>
 </ul>
 			<li>Add the level of authorization, expiry date, and (for businesses only) the program accounts you are requesting access to, then <strong>Confirm</strong></li>
