--- a/en/revenue-agency/services/e-services/cra-login-services/about-login.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-login.html
@@ -63,7 +63,7 @@
     </ul>
   </nav>
 <h2 id="section1">Who can register for a CRA account</h2>
-<p>You can register for a CRA acount if you have:</p>
+<p>You can register for a CRA account if you have:</p>
 	<ul class="fa-ul">
      <li><span class="fas fa-check text-success fa-li"></span>A social insurance number (SIN)
     <br><strong>Alternatives:</strong>
