--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -116,8 +116,7 @@
     </header>
   </div>
 </div>
-<main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
-  <h1 property="name" class="gc-thickline" id="wb-cont" dir="ltr">Help for CRA accounts</h1>
+<main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
   <h1 property="name" class="gc-thickline" id="wb-cont" dir="ltr">Help for CRA accounts</h1>
   <div  data-wb-urlmapping='{
 	"type=myacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_mya"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_mya\"])", "class": "wb-tgfltr-out" }], "type=mybusacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_myba"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_myba\"])", "class": "wb-tgfltr-out" }], "type=rac": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_rac"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_rac\"])", "class": "wb-tgfltr-out" }]
