--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -163,31 +163,31 @@
         <section class="wb-tagfilter-items">
           <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Registration</h2>
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd"> 
-            <!--  <div class="col-sm-6 col-md-4 tag-fltr  url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac" id="test1">
+            <!--  <div class="col-sm-6 tag-fltr  url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac" id="test1">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="register.html" class="stretched-link">Options for registering</a></h3>
                 <p>Information about CRA user ID and password, <i>Interac&reg;</i> sign-in partner, and provincial sign-in partner</p>
               </div>
             </div> -->
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html?account=mya">My Account registration</a></h3>
                 <p>Registration instructions, sign-in options for My Account</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_myba">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html?account=mba" class="stretched-link">My Business Account registration</a></h3>
                 <p>Registration instructions, sign-in options for My Business Account</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html?account=rac">Represent a Client registration</a></h3>
                 <p>Registration instructions, sign-in options for Represent a Client</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba  fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba  fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="securitycode.html" class="stretched-link">Validate your identity</a></h3>
                 <p><i>Interac&reg</i> document verification service, CRA security code</p>
@@ -198,26 +198,26 @@
         <section class="wb-tagfilter-items">
           <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Review and update your information</h2>
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html" class="stretched-link">My Account: Update information</a></h3>
                 <!--  <p>Change your phone number, address, email address, or marital status</p> -->
                 <p>Change your address, phone number, direct deposit and other personal information</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_myba">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business.html" class="stretched-link">My Business Account: Update information</a></h3>
                 <p>Change your business information, add more businesses to your account</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="updaterac.html" class="stretched-link">Represent a Client: Update information</a></h3>
                 <p>Review and update information about yourself, your business, and your clients</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba  fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba  fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html" class="stretched-link">Direct Deposit</a></h3>
                 <p>Sign up for or change your direct deposit information</p>
@@ -228,37 +228,37 @@
         <section class="wb-tagfilter-items">
           <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Access your account</h2>
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-login.html#section2" class="stretched-link">Account availability</a></h3>
                 <p>Hours of service, browser requirements</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="about-cra-userID-password.html" class="stretched-link">About CRA user ID and password</a></h3>
                 <p>When and how to use, change or recover a CRA user ID and password, change your sign-in option</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="about-interac-partner.html" class="stretched-link">About <i>Interac</i> sign-in partners</a></h3>
                 <p>When to use an <i>Interac</i> sign-in partner, your privacy, switching sign-in partners</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="about-provincial-partner.html" class="stretched-link">About provincial digital ID</a></h3>
                 <p>When to use a provincial digital ID, benefits and limitations</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html" class="stretched-link">Multi-factor authentication (MFA)</a></h3>
                 <p>MFA options, one-time passcode, what to do if you can't receive your passcode</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/locked-account.html" class="stretched-link">Locked account</a></h3>
                 <p>Recover a locked account, avoid getting locked out</p>
@@ -269,62 +269,62 @@
         <section class="wb-tagfilter-items">
           <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac"><!--Authorization to other accounts-->Manage your account</h2>
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="security.html" class="stretched-link"><!--Staying secure on sign-in accounts-->Keep your CRA account secure</a></h3>
                 <p>Manage security options, monitor for suspicious activity</p>
               </div>
             </div>
-            <!--  <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <!--  <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="change-sign-in.html" class="stretched-link">Change your sign-in information</a></h3>
                 <p>Revoke your credentials, change your <i>Interac</i> sign-in partner</p>
               </div>
             </div> -->
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html" class="stretched-link">Representatives: Request authorization</a></h3>
                 <p>How to request authorization to access someone else's account</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/tax/representative-authorization/overview.html" class="stretched-link">Authorize a representative</a></h3>
                 <p>Who can be a representative, your responsibilities, levels of access you can give, ways to authorize</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html" class="stretched-link">Confirm an authorization request</a></h3>
                 <p>How to verify authorization requests submitted by representatives using the CRA's accounts</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/tax/representative-authorization/cancel.html" class="stretched-link">Cancel a representative's authorization</a></h3>
                 <p>How to cancel your representative's authorization</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="businesssetup.html" class="stretched-link">Business set-up in Represent a Client</a></h3>
                 <p>Register your business, create a BN Group, associate employees, assign taxpayers</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html" class="stretched-link">GroupID set-up in Represent a Client</a></h3>
                 <p>Create a GroupID, associate representatives</p>
               </div>
             </div>
             
-            <!-- <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
+            <!-- <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="#" class="stretched-link">My Trust Account access</a></h3>
                 <p>[Doormat text here]</p>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_myba">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="#" class="stretched-link">Adding more businesses to My Business Account</a></h3>
                 <p>[Doormat text here]</p>
@@ -332,20 +332,20 @@
             </div> --> 
           </div>
         </section>
-        <!--    <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+        <!--    <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="security.html" class="stretched-link">Staying secure on sign-in accounts</a></h3>
                 <p>[Doormat text here]</p>
               </div>
             </div> 
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="#" class="stretched-link">Browser requirements</a></h3>
                 <p>[Doormat text here]</p>
               </div>
             </div> --> 
         
-        <!--  <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+        <!--  <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="userIDandpassword.html" class="stretched-link">Your sign in information</a></h3>
                 <p>Revoked or lost user IDs and passwords, changing your sign-in method</p>
@@ -357,7 +357,7 @@
   <!--  <section class="wb-tagfilter-items">
           <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Guide support</h2>
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
-            <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+            <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="#" class="stretched-link">Glossary of terms for sign-in accounts</a></h3>
                 <p>[Doormat text here]</p>
