--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html
@@ -225,7 +225,7 @@
                       <ol class="">
                         <li>Submit <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc391.html">Form RC391, Application for a Canada Revenue Agency Non-Resident Representative Number (NRRN)</a>, and provide supporting documentation to prove your identity</li>
                         <li>Wait until you receive a letter in the mail with your NRRN</li>
-                        <li>Register for Represent a Client with your NRRN instead of a social insurance number</li>
+                        <li>Register for Represent a Client with your NRRN instead of a SIN</li>
                       </ol>
                     </details>
                   </li>
@@ -339,13 +339,13 @@
                         <p>None of your personal tax information will be shared with your financial institution.</p>
                       </li>
                     </ul>
-			  <p>Learn more about our commitment to you privacy: <a href="https://www.canada.ca/en/revenue-agency/corporate/privacy-notice.html">Privacy Statement</a></p>
+			  <p>Learn more about our commitment to your privacy: <a href="https://www.canada.ca/en/revenue-agency/corporate/privacy-notice.html">Privacy Statement</a></p>
                   </details>
                   <p class="mrgn-tp-lg"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html">More help with <i>Interac</i> sign-in partners</a></p>
                 </details>
 		       <details id="ajax-help-interac2" class="mrgn-tp-md">
                     <summary>Do not use autofill on a shared device</summary>
-                    <p>Do <strong>not</strong> use auto-complete for your online banking information if you register on a shared device. When you are on your sign-in partner's website, <a href ="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html#section3">ensure it is <strong>your</strong> information</a> that is entered and not that of somebody else.</p>
+                    <p>Do <strong>not</strong> use autofill for your online banking information if you register on a shared device. When you are on your sign-in partner's website, <a href ="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html#section3">ensure it is <strong>your</strong> information</a> that is entered and not that of somebody else.</p>
                     <p>If you register with someone else's banking credentials by mistake and link your SIN to them, the other person will have access to your tax information.</p>
                   </details>
               </li>
@@ -487,8 +487,8 @@
           <div class="col-md-8">
             <details>
               <summary>Avoid getting locked out of your account</summary>
-              <p>Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app. When you sign in to your account, you can update your current MFA settings or enroll in additional MFA options.</p>
-              <p>If your account becomes locked due to entering the wrong one-time passcode too many times, you will be temporarily locked out for 30 minutes. After that period, you can try again.</p>
+              <p>We recommend that you enroll in more than one option, although only one option is required. Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app.</p>
+              <p>If your account becomes locked due to entering the wrong one-time passcode too many times, you will be temporarily locked out for 30 minutes. After that period, you can try again. If this happens 3 times, you will be permanently locked out, and will need to contact us by phone.</p>
               <p class="mrgn-tp-md"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html">More help with multi-factor authentication</a></p>
             </details>
           </div>
@@ -548,7 +548,7 @@
             <summary>Have not filed your taxes</summary>
             <p>If you have not filed your taxes for the current or previous tax year, you will not be able to register for My Account using a CRA user ID and password or an <i>Interac</i> sign-in partner. You also won't be able to register for My Business Account or Represent a Client.</span></p>
             <p>For information on how to file, go to <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes.html">Get ready to do your taxes</a>.</p>
-            <p>If you live in BC or Alberta, you may be able to register for My Account using a provincial digital ID.</p>
+            <p>If you live in British Columbia or Alberta, you may be able to register for My Account using a provincial digital ID.</p>
           </details>
         </div>
         <div class="col-sm-6">
@@ -566,11 +566,11 @@
           <p>How to register and manage your account, update your information, use multifactor authentication (MFA)</p>
         </div>
         <div class="col-sm-6 mya hidden">
-          <h3 class="mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help with using your My Account</a></h3>
+          <h3 class="mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help with using My Account</a></h3>
           <p>How to register and manage your account, update your information, use multifactor authentication (MFA)</p>
         </div>
         <div class="col-sm-6 mba hidden">
-          <h3 class="mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=mybusacct">Help with using your My Business Account</a></h3>
+          <h3 class="mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=mybusacct">Help with using My Business Account</a></h3>
           <p>How to register and manage your account, update your information, use multifactor authentication (MFA)</p>
         </div>
         <div class="col-sm-6 rac hidden">
