--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html
@@ -160,7 +160,7 @@
           <div class="cnjnctn-type-or cnjnctn-md mrgn-tp-0 brdr-0">
             <div class="cnjnctn-col">
               <div id="ajax-sign-in">
-                <h3 class="mrgn-tp-sm">Sign in</h3>
+                <h3 class="mrgn-tp-sm">Sign in to your account</h3>
                 <p>Use the sign-in option you registered with:</p>
                 <div class="row mrgn-tp-md">
 						                  <div class="col-sm-10 col-sm-offset-1">
