--- a/en/revenue-agency/services/e-services/represent-a-client.html
+++ b/en/revenue-agency/services/e-services/represent-a-client.html
@@ -272,8 +272,8 @@
   <div class="alert alert-info">
     <div>
       <details class="mrgn-bttm-0">
-        <summary>Get quick access by verifying your identity when you register</summary>
-        <p><i>Interac&reg</i> document verification service is now available. When you register for a CRA online account, you can use this service to validate your identity immediately instead of waiting 5 to 10 business days to get your CRA security code in the mail.</p>
+       <summary>A faster way to validate your identity when you register</summary>
+        <p><i>Interac&reg</i> document verification service is now available. When you register for a CRA account, you can use this service to validate your identity immediately instead of waiting 5 to 10 business days to get your CRA security code in the mail.</p>
      <!--   <p>To get faster access to all features, go to: <a href="/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html">register for a sign-in account</a>.</p>-->
       </details>
       <details class="mrgn-bttm-0">
@@ -316,15 +316,18 @@
                   </details>-->
                   <ul class="list-unstyled lst-spcd-2">
                     <li><a data-gc-analytics-customclick="CRA|ARC:Option 2 button click:CRA login button" class="btn btn-primary btn-lg btn-block p-sm-3" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&lang=en&program=pzaz&idp=cms"><span class="h4"><span class="fas fa-sign-in-alt fa-fw fa-lg mrgn-rght-sm fa-pull-left"></span>CRA user ID and password<span class="wb-inv"> sign-in</span></span></a></li>
-                    <li><a data-gc-analytics-customclick="CRA|ARC:Option 1 button click:Sign-In Partner Login/Register button" class="btn btn-primary btn-lg btn-block p-sm-3" href="https://ams-sga-cra-arc.fjgc-gccf.gc.ca/gol-ged/awsc/amss/commonDomain/w?target=login&lang=en&program=pzaz&idp=idp1&dm=x"><span class="h4"><span class="fas fa-university fa-fw fa-lg mrgn-rght-sm  fa-pull-left"></span><i>Interac</i>&reg; sign-in partner<span class="wb-inv"> bank sign-in</span></span></a></li>
+                    <li><a data-gc-analytics-customclick="CRA|ARC:Option 1 button click:Sign-In Partner Login/Register button" class="btn btn-primary btn-lg btn-block p-sm-3" href="https://ams-sga-cra-arc.fjgc-gccf.gc.ca/gol-ged/awsc/amss/commonDomain/w?target=login&lang=en&program=pzaz&idp=idp1&dm=x"><span class="h4"><span class="fas fa-university fa-fw fa-lg mrgn-rght-sm  fa-pull-left"></span><i>Interac</i>&reg; sign-in partner<span class="wb-inv"> bank sign-in</span></span></a>
+		    		     		                 <section class="mrgn-tp-md mrgn-lft-md" data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#ajax-help-interac2"></section>
+
+		    </li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
           <div class="cnjnctn-col cnjnctn-col-60">
-            <h3 class="mrgn-tp-sm">Create an account</h3>
-            <p>If you don't have a CRA Represent a Client account, you can register for one.</p>
+            <h3 class="mrgn-tp-sm">Register for an account</h3>
+            <p>If you don't already have a CRA account, you can create one.</p>
             <div class="row mrgn-tp-md">
 		   <!-- <details class="mrgn-bttm-lg">
 				 <summary class="max-content">If you are using a shared device</summary>
@@ -340,91 +343,18 @@
 </section>
 <div class="well brdr-0 brdr-rds-0 mrgn-tp-lg">
   <section class="container">
-    <h2 class="mrgn-tp-0">Help with your account</h2>
+    <h2 class="mrgn-tp-0">Help centre</h2>
     <h3 class="h5">Common issues with signing in</h3>
     <div class="row">
       <div class="col-sm-6">
-        <details>
-          <summary>Forgotten password or CRA user ID</summary>
-          <!--This is the same for MyA, MyBA, and RAC but not Candidiate profile-->
-          <h4 class="h5">Forgotten password</h4>
-          <p>If you have forgotten your CRA password:</p>
-              <ol class="">
-              <li>Select <strong>CRA user ID and password</strong> from the sign-in options</li> 
-                <li>Select <strong>Forgot your password?</strong></li></ol>
-            <p>You can create a new password if you correctly answer the security questions you chose when you registered.</p>
-            <h4 class="h5">Forgotten CRA user ID</h4>
-            <p>To recover your CRA user ID:</p>
-            <ol class="">
-            <li>Select <strong>CRA user ID and password</strong> from the sign-in options</li>
-              <li>Select <strong>Forgot your user ID?</strong></li></ol>
-          <p>You will need the following: </p>
-          <ul>
-            <li>Your social insurance number (SIN)</li>
-            <li>Your date of birth</li>
-            <li>The amount you entered on line 15000 of your income tax and benefit return from the current or previous tax year</li>
-          </ul>
-          <p>The next time you sign in, you will need to answer 4 of your 5 CRA security questions.</p>
-				  <p><A href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html">More help with CRA user ID and password</a></p>
-
-        </details>
-        <details>
-          <summary>Did not receive one-time passcode</summary>
-          <!--h4 class="h5">One-time passcode by phone</h4-->
-          <p class="mrgn-tp-md">Multi-factor authentication (MFA) increases the security of your account by requiring you to enter a one-time passcode each time you sign in. </p>
-          <h3 class="h5">One-time passcode by phone</h3>
-          <p>If you cannot receive your one-time passcode by phone, you can:</p>
-          <ul>
-            <li>Ask for it to be resent or sent to a different telephone number that is already connected to your account</li>
-            <li>Select a <strong>different option</strong> to use the passcode grid or authenticator app if you are already enrolled with either of those options</li>
-            <li>Confirm that you are signing in to your account, make sure auto fill is turned off or direct sign-in is disabled (e.g. through your financial institution) </li>
-          </ul>
-          <h3 class="h5">One-time passcode by passcode grid</h3>
-          <p>If you lose your passcode grid or it expires, you will still be able to sign in if you have also added the phone or authenticator app option for MFA.</p>
-		<h3 class="h5">Time-based one-time passcode by authenticator app</h3>
-          <p>If you can't access your authenticator app, you will still be able to sign in if you have also added the phone or passcode grid option for MFA.</p>
-          <h3 class="h5">When to contact us</h3>
-          <p>If you still cannot receive your one-time passcode, please <a href="/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
-          <p class="mrgn-tp-md"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html">More help with multi-factor authentication</a></p>
-        </details>
-        <details>
-          <summary>Expired CRA security code</summary>
-          <p class="mrgn-tp-md">If your CRA security code expires, has been lost, or has not arrived after waiting 10 business days, you may choose instead to use the <i>Interac</i> document verification service to validate your identity.</p>
-		  <p>If you prefer to receive another CRA security code by mail, you can <a href="/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to get a new one.</p>
-        </details>
-      </div>
-      <div class="col-sm-6">
-        <details>
-          <summary>Recover a locked account</summary>
-          <p class="mrgn-tp-md">Your account will become locked if you enter the wrong information too many times for any of the following:</p>
-          <ul>
-            <li>CRA user ID and password</li>
-            <li>One-time passcode for multi-factor authentication (MFA)</li>
-            <li>Security questions</li>
-            <li>CRA security code</li>
-          </ul>
-          <p>If your account becomes locked, <a href="/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to have your account unlocked.</p>
-        </details>
-        <details>
-          <summary>Revoked user ID and password</summary>
-          <p class="mrgn-tp-md">If your CRA user ID and password have been revoked, you can regain access to your account in either of the following ways:</p>
-          
-          <ul>
-            <li>Sign in with another option if you are already registered</li>
-         <!--   <li><a href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/register.html">Register for a new CRA user ID</a></li>
-          -->
-		  <li><a href="/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">Contact us</a> to register for a new CRA user ID and password</li>
-	  
-	  </ul>
-          <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section6">More help with revoked CRA user ID and password</a></p>
-        </details>
-      <details>
-           <summary>Change the option you sign in with</summary>
-          <p class="mrgn-tp-md">If you registered with a <strong>provincial digital ID</strong>, you can also register with a CRA user ID and password or <i>Interac</i> sign-in partner.</p>
-            <p>If you registered with a <strong>CRA user ID and password</strong>, you can sign in with your CRA user ID and password and <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section8">revoke your credential</a> so you can register with a different sign-in option.</p>
-		<p>If you registered with an <strong><i>Interac</i> sign-in partner</strong>, you can sign in to your current <i>Interac</i> sign-in partner and <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html#section4">switch to a different bank or credit union</a>.</p>    
-		  
-          </details>
+         <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services.html#ajax-forgotten-password-userID"></section>
+      	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services.html#ajax-did-not-receive-passcode"></section>
+	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services.html#ajax-expired-security-code"></section>
+	       </div>
+        <div class="col-sm-6">
+	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services.html#ajax-recover-locked-account"></section>
+	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services.html#ajax-revoked"></section>
+	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services.html#ajax-change-sign-in-option"></section>
       </div>
     </div>
     <h3 class="wb-inv">Help and about sign-in</h3>
@@ -432,12 +362,12 @@
       <div class="col-sm-6">-->
 	  <div class="row wb-eqht-grd mrgn-tp-lg">
     <div class="col-sm-6 col-md-4">
-        <h3 class="mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=rac">More help for Represent a Client</a></h3>
-        <p>Registering, accessing, updating and managing your information in RAC, using MFA, getting and giving authorization</p>
+        <h3 class="mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=rac">Help with using Represent a Client</a></h3>
+        <p>How to register, manage and update your account, use MFA, request authorization</p>
       </div>
       <div class="col-sm-6 col-md-4">
         <h3 class="mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client/aboutrac.html">About Represent a Client</a></h3>
-        <p>What's new and updated, online hours of availability, features, privacy commitments, browser requirements</p>
+        <p>What's new and updated, account availability, features, privacy commitments</p>
       </div>
 	<div class="col-sm-6 col-md-4">
         <h3 class="mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html">About My Trust Account</a></h3>
