--- a/en/revenue-agency/services/e-services/represent-a-client.html
+++ b/en/revenue-agency/services/e-services/represent-a-client.html
@@ -265,7 +265,7 @@
     <h1 property="name" dir="ltr" id="wb-cont" class="mrgn-tp-0"> Represent a Client<span class="wb-inv"> - CRA Sign in</span></h1>
   </div>
 <!--  <p>View and update tax and benefit information for another individual or business with their permission.</p>-->
-		 <p>Sign in or register to manage business, trust, or individual information on behalf of someone else. You can be authorized to do this by a friend, family member or client.</p>
+		 <p>Sign in or register to manage business, trust, or individual information on behalf of someone else. You must be authorized to do this by your clients, including friends and family members.</p>
 </section>
 <section class="container">
   <h2 class="wb-inv">Information alerts</h2>
