--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -121,7 +121,7 @@
   <div  data-wb-urlmapping='{
 	"type=myacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_mya"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_mya\"])", "class": "wb-tgfltr-out" }], "type=mybusacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_myba"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_myba\"])", "class": "wb-tgfltr-out" }], "type=rac": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_rac"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_rac\"])", "class": "wb-tgfltr-out" }]
 }'></div>
-  <p>Find help for registering, accessing, updating and managing your My Account, My Business Account and Represent a Client, and getting and giving authorization.</p>
+  <p>Find help with using My Account, My Business Account and Represent a Client. Learn about registering and managing your account, updating your personal and business information, and getting and giving authorization.</p>
   <section id="filteredFAQ" class="wb-tagfilter provisional wb-filter" data-wb-filter='{
 		"selector": ".tag-fltr",
 		"section": ".wb-tagfilter-items",
