--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -237,7 +237,7 @@
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="about-cra-userID-password.html" class="stretched-link">About CRA user ID and password</a></h3>
-                <p>When and how to use, change or recover a CRA user ID and password, change your sign-in option</p>
+                <p>How to use or recover a CRA user ID and password, change your sign-in option</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
@@ -255,7 +255,7 @@
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html" class="stretched-link">Multi-factor authentication (MFA)</a></h3>
-                <p>MFA options, one-time passcode, what to do if you can't receive your passcode</p>
+                <p>MFA options, what to do if you can't receive your one-time passcode</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
@@ -307,13 +307,13 @@
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="businesssetup.html" class="stretched-link">Business set-up in Represent a Client</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="businesssetup.html" class="stretched-link">Set up your business to use Represent a Client</a></h3>
                 <p>Register your business, create a BN Group, associate employees, assign taxpayers</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html" class="stretched-link">GroupID set-up in Represent a Client</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html" class="stretched-link">Create and manage a GroupID in Represent a Client</a></h3>
                 <p>Create a GroupID, associate representatives</p>
               </div>
             </div>
