--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -248,8 +248,8 @@
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="about-provincial-partner.html" class="stretched-link">About provincial digital ID</a></h3>
-                <p>When to use a provincial digital ID, benefits and limitations</p>
+                <h3 class="h4 mrgn-tp-0"><a href="about-provincial-partner.html" class="stretched-link">About provincial sign-in partners</a></h3>
+                <p>When to use a provincial sign-in partner, benefits and limitations</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
