--- a/en/revenue-agency/services/e-services/cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services.html
@@ -301,7 +301,7 @@
           </details>
         <details id="ajax-change-sign-in-option">
             <summary>Change the option you sign in with</summary>
-          <p>If you registered with a <strong>provincial digital ID</strong>, you can also create a CRA user ID and password or use an <i>Interac</i> sign-in partner.</p>
+          <p>If you registered with a <strong>provincial sign-in partner</strong>, you can also create a CRA user ID and password or use an <i>Interac</i> sign-in partner.</p>
             <p>If you registered with a <strong>CRA user ID and password</strong>, you can sign in with your CRA user ID and password and <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section8">revoke your credential</a> so you can register with a different sign-in option.</p>
 		<p>If you registered with an <strong><i>Interac</i> sign-in partner</strong>, you can sign in to your current <i>Interac</i> sign-in partner and <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html#section4">switch to a different bank or credit union</a>.</p>    
 		  
