--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html
@@ -189,7 +189,7 @@
 
 		      </li>
                     
-			    <li><a class="btn btn-primary btn-lg btn-block p-sm-3" href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/provincial-partner.html"><span class="h4"><span class="fas fa-id-card fa-lg mrgn-rght-sm fa-pull-left"></span>Provincial digital ID (BC, Alberta)</span></a></li>
+			    <li><a class="btn btn-primary btn-lg btn-block p-sm-3" href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/provincial-partner.html"><span class="h4"><span class="fas fa-id-card fa-lg mrgn-rght-sm fa-pull-left"></span>Provincial sign-in partner (BC, Alberta)</span></a></li>
                     </ul>
                   </div>
                 </div>
